--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -63,6 +63,7 @@
       <%= yield :title %>
     </h1>
   </span>
+  <%= yield :top_nav %>
   <% unless content_for?(:hide_duration) %>
     <div class="dropdown">
       <button class="secondary">
