--- a/app/views/rails_observatory/application/_events_table.html.erb
+++ b/app/views/rails_observatory/application/_events_table.html.erb
@@ -14,12 +14,12 @@
         <% fields.each do |f| %>
           <% if (formatter = local_assigns[:formatters]&.fetch(f, nil)) %>
             <% if formatter.arity == 2 %>
-            <td><%= formatter.call(e.respond_to?(f) ? e.send(f) : e.payload[f], e) %></td>
+            <td><%= formatter.call(e.respond_to?(f) ? e.send(f) : 'unknownattribute', e) %></td>
               <% else %>
-            <td><%= formatter.call(e.respond_to?(f) ? e.send(f) : e.payload[f]) %></td>
+            <td><%= formatter.call(e.respond_to?(f) ? e.send(f) : 'unknownattribute') %></td>
             <% end %>
           <% else %>
-            <td><%= format_event_value(e.respond_to?(f) ? e.send(f) : e.payload[f]) %></td>
+            <td><%= format_event_value(e.respond_to?(f) ? e.send(f) : 'unknownattribute') %></td>
           <% end %>
         <% end %>
       </tr>
