--- a/public/assets/stylesheets/application.css
+++ b/public/assets/stylesheets/application.css
@@ -78,12 +78,18 @@ details {
   margin: 0;
 }
 
-/* app/assets/stylesheets/layout/errors-show.css */
-.layout\/errors-show {
+/* app/assets/stylesheets/layout/details-side-panel.css */
+.layout\/details-side-panel {
   padding: 0;
   display: grid;
   grid-template-areas: "details side-panel";
   grid-template-columns: minmax(400px, 1fr) 300px;
+  & > .details {
+    grid-area: details;
+  }
+  & > .side-panel {
+    grid-area: side-panel;
+  }
 }
 
 /* app/assets/stylesheets/layout/requests-index.css */
@@ -281,25 +287,58 @@ details {
       align-items: baseline;
     }
   }
-}
-
-/* app/assets/stylesheets/errors/show/details.css */
-.errors\/show\/details {
-  grid-area: details;
-  margin: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  & > h2 {
-    margin-block: 1rem;
-    padding-left: 1rem;
+  .status-success {
+    background-color: #38a238;
+    padding: .25rem .5rem;
+    border-radius: .5rem;
     font-size: 1.25rem;
   }
 }
 
-/* app/assets/stylesheets/errors/show/side-panel.css */
-.errors\/show\/side-panel {
-  grid-area: side-panel;
+/* app/assets/stylesheets/application/tab-nav.css */
+.tabs {
+  .tab-nav {
+    border-bottom: 1px solid var(--divider);
+    border-top: 1px solid var(--divider);
+    padding-block: .5rem;
+    & > ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: .5rem;
+      flex-grow: 1;
+      padding-inline: 1.25rem;
+      & a {
+        display: flex;
+        align-items: center;
+        padding: .5rem .75rem;
+        gap: .5rem;
+        border-radius: .5rem;
+        text-decoration: none;
+        font-weight: 400;
+        color: color-mix(in oklab, var(--black) 20%, white);
+        &:hover {
+          background-color: var(--surface-hover);
+        }
+      }
+    }
+  }
+  .tab-content {
+    padding: 1rem 2rem;
+    & dd {
+      margin-left: 0;
+    }
+    & dt {
+      font-weight: 400;
+      color: var(--black-secondary);
+      margin-bottom: .75rem;
+    }
+  }
+}
+
+/* app/assets/stylesheets/application/side-panel.css */
+.side-panel {
   color: var(--white);
   padding: 2rem;
   ._occurrence_count {
@@ -326,6 +365,50 @@ details {
     & dd + dt {
       margin-top: 2.5rem;
     }
+  }
+}
+
+/* app/assets/stylesheets/application/chart.css */
+[data-chart-type-value=icicle] {
+  .apexcharts-legend-series {
+    display: flex;
+    gap: .25rem;
+    align-items: center;
+  }
+  .apexcharts-legend-text {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+    padding-block: .25rem;
+    .percent {
+      display: flex;
+      gap: .5rem;
+    }
+    .bar {
+      width: 2rem;
+      height: 14px;
+      background-color: var(--surface-card);
+      & > div {
+        height: 100%;
+        background-color: var(--blue);
+      }
+    }
+  }
+}
+
+/* app/assets/stylesheets/errors/show/details.css */
+.errors\/show\/details {
+  grid-area: details;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  & > h2 {
+    margin-block: 1rem;
+    padding-left: 1rem;
+    font-size: 1.25rem;
   }
 }
 
@@ -360,10 +443,22 @@ details {
     }
   }
 }
+.table-bar-chart {
+  display: grid;
+  grid-template-columns: min-content min-content 3rem min-content;
+  column-gap: 1rem;
+  row-gap: .5rem;
+  .bar {
+    background-color: var(--surface-card);
+    & > * {
+      background-color: var(--blue);
+      height: 100%;
+    }
+  }
+}
 
 /* app/assets/stylesheets/application.css */
 main {
   grid-area: main;
-  padding: 1rem;
   overflow: auto;
 }
